@@ -44,13 +44,10 @@ dependencies {
 
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
 
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
-
     compile "com.madgag.spongycastle:core:1.58.0.0"
     compile "com.madgag.spongycastle:prov:1.58.0.0"
 
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
-
 
     compile "com.cedarsoftware:java-util:1.8.0"
 
@@ -215,9 +212,62 @@ def binaryRelease(taskName, jarName, mainClass) {
     }
 }
 
+def createScript(project, mainClass, name) {
+    project.tasks.create(name: name, type: CreateStartScripts) {
+        unixStartScriptGenerator.template = resources.text.fromFile('../gradle/unixStartScript.txt')
+        windowsStartScriptGenerator.template = resources.text.fromFile('../gradle/windowsStartScript.txt')
+        outputDir = new File(project.buildDir, 'scripts')
+        mainClassName = mainClass
+        applicationName = name
+        classpath = project.tasks[JavaPlugin.JAR_TASK_NAME].outputs.files + project.configurations.runtime
+//        defaultJvmOpts = ['-XX:+UseConcMarkSweepGC',
+//                          '-XX:+PrintGCDetails',
+//                          '-Xloggc:./gc.log',
+//                          '-XX:+PrintGCDateStamps',
+//                          '-XX:+CMSParallelRemarkEnabled',
+//                          '-XX:ReservedCodeCacheSize=256m',
+//                          '-XX:+CMSScavengeBeforeRemark'
+//        ]
+    }
+    project.tasks[name].dependsOn(project.jar)
+    project.applicationDistribution.with {
+        into("bin") {
+            from(project.tasks[name])
+            fileMode = 0755
+        }
+    }
+}
+
+applicationDistribution.from("../gradle/java-tron.vmoptions") {
+    into "bin"
+}
+//distZip {
+//    doLast {
+//        file("$destinationDir/$archiveName").renameTo("$destinationDir/"+'java-tron-'+version+'-bin.zip')
+//    }
+//}
+configurations.archives.artifacts.removeAll { it.type == 'tar' }
+applicationName = 'java-tron'
+startScripts.enabled = false
+run.enabled = false
+tasks.distTar.enabled = false
+
+createScript(project, 'org.tron.program.SolidityNode', 'SolidityNode')
+createScript(project, 'org.tron.program.FullNode', 'FullNode')
+createScript(project, 'org.tron.program.KeystoreFactory', 'KeystoreFactory')
+createScript(project, 'org.tron.program.DBConvert', 'DBConvert')
+
 artifacts {
     archives(binaryRelease('buildSolidityNodeJar', 'SolidityNode', 'org.tron.program.SolidityNode'),
             binaryRelease('buildFullNodeJar', 'FullNode', 'org.tron.program.FullNode'),
             binaryRelease('buildKeystoreFactoryJar', 'KeystoreFactory', 'org.tron.program.KeystoreFactory'),
             binaryRelease('buildDBConvertJar', 'DBConvert', 'org.tron.program.DBConvert'))
 }
+
+task copyToParent(type: Copy) {
+    into "../build/distributions"
+    from "$buildDir/distributions"
+    include "*.zip"
+}
+
+build.finalizedBy(copyToParent)
